--- a/.github/workflows/publish_app_dev.yaml
+++ b/.github/workflows/publish_app_dev.yaml
@@ -15,24 +15,14 @@ jobs:
       contents: write
 
     steps:
-      # 签出代码
+      # 签出代码 (已修改：获取完整历史以修复版本号计算错误)
       - uses: actions/checkout@v4
         with:
           ref: dev
+          fetch-depth: 0
+          fetch-tags: true
 
-      # APK签名设置
-      - name: Download Android keystore
-        id: android_keystore
-        uses: timheuer/base64-to-file@v1.2
-        with:
-          fileName: keystore.jks
-          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
-      - name: Create key.properties
-        run: |
-          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > simple_live_app/android/key.properties
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> simple_live_app/android/key.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> simple_live_app/android/key.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> simple_live_app/android/key.properties
+      # --- [已删除：APK签名设置] 防止因缺少Secrets报错 ---
 
       # 设置JAVA环境
       - uses: actions/setup-java@v4
@@ -129,10 +119,12 @@ jobs:
     permissions:
       contents: write
     steps:
-      # 签出代码
+      # 签出代码 (已修改：获取完整历史)
       - uses: actions/checkout@v4
         with:
           ref: dev
+          fetch-depth: 0
+          fetch-tags: true
       # 设置Flutter环境
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -178,10 +170,12 @@ jobs:
     permissions:
       contents: write
     steps:
-      # 签出代码
+      # 签出代码 (已修改：获取完整历史)
       - uses: actions/checkout@v4
         with:
           ref: dev
+          fetch-depth: 0
+          fetch-tags: true
       # 设置Flutter环境
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
